マークダウン更新

--- a/data/markdown/es2015.md
+++ b/data/markdown/es2015.md
@@ -1,7 +1,7 @@
 # ECMAScript2015+の基礎知識
 
-**React / Next.js**を使いこなすためには、**ECMAScript2015+**の知識が必要です。  
-Reactの学習を始めるまえに、おさらいしておきましょう。
+**React / Next.js**を使いこなすためには、**ECMAScript2015+**（以下、ES2015+）の知識が必要です。  
+Reactの学習を始めるまえに、おさらいをしておきましょう。
 
 ## 定数と変数
 - 定数 `const`
@@ -203,7 +203,7 @@ export default 'テキスト';
 // index.js
 import foo from "./foo";
 
-console.log(foo); // テキスト
+console.log(foo); // -> テキスト
 ```
 
 これでもOK。
@@ -220,7 +220,7 @@ export default text;
 // textじゃなくてもOK
 import foo from "./foo";
 
-console.log(foo); // テキスト
+console.log(foo); // -> テキスト
 ```
 
 複数`export`する場合。
@@ -247,10 +247,19 @@ export const foo = (a, b) => a + b;
 // index.js
 import { num, member, person, foo } from "./foo";
 
-console.log(num); // 1
-console.log(member); // ['ネズミ', '牛']
-console.log(person); // { name: '大塚', age: 3 }
-console.log(foo(1, 2)); // 3
+console.log(num); // -> 1
+console.log(member); // -> ['ネズミ', '牛']
+console.log(person); // -> { name: '大塚', age: 3 }
+console.log(foo(1, 2)); // -> 3
+```
+
+欲しい物だけ`import`すればOK。
+
+```js
+// index.js
+import { num } from "./foo";
+
+console.log(num); // -> 1
 ```
 
 `* as moduleName`で、まとめることもできる。
@@ -262,18 +271,20 @@ import * as fooModule from "./foo";
 // fooModuleにオブジェクト形式で格納されている
 const { num, member, person, foo } = fooModule;
 
-console.log(num); // 1
-console.log(member); // ['ネズミ', '牛']
-console.log(person); // { name: '大塚', age: 3 }
-console.log(foo(1, 2)); // 3
+console.log(num); // -> 1
+console.log(member); // -> ['ネズミ', '牛']
+console.log(person); // -> { name: '大塚', age: 3 }
+console.log(foo(1, 2)); // -> 3
 ```
+
+変数名を変えることもできる。
 
 ```js
 // index.js
 // num を number に変えている
 import { num as number } from "./foo";
 
-console.log(number); // 1
+console.log(number); // -> 1
 ```
 
 `export default`と`export`は併用できる。
@@ -302,10 +313,10 @@ export default foo;
 // index.js
 import foo, { num, member, person } from "./foo";
 
-console.log(num); // 1
-console.log(member); // ['ネズミ', '牛']
-console.log(person); // { name: '大塚', age: 3 }
-console.log(foo(1, 2)); // 3
+console.log(num); // -> 1
+console.log(member); // -> ['ネズミ', '牛']
+console.log(person); // -> { name: '大塚', age: 3 }
+console.log(foo(1, 2)); // -> 3
 ```
 
 これもOK。
@@ -316,8 +327,8 @@ import foo, * as fooModule from "./foo";
 
 const { num, member, person } = fooModule;
 
-console.log(num); // 1
-console.log(member); // ['ネズミ', '牛']
-console.log(person); // { name: '大塚', age: 3 }
-console.log(foo(1, 2)); // 3
+console.log(num); // -> 1
+console.log(member); // -> ['ネズミ', '牛']
+console.log(person); // -> { name: '大塚', age: 3 }
+console.log(foo(1, 2)); // -> 3
 ```
