--- a/data/markdown/es2015.md
+++ b/data/markdown/es2015.md
@@ -1,7 +1,6 @@
 # ECMAScript2015+の基礎知識
 
-**React / Next.js**を使いこなすためには、**ECMAScript2015+**（以下、ES2015+）の知識が必要です。  
-Reactの学習を始めるまえに、おさらいをしておきましょう。
+**React / Next.js**を使いこなすためには、**ECMAScript2015+**（以下、ES2015+）の知識が必要です。Reactの学習を始めるまえに、おさらいをしておきましょう。
 
 ## 定数と変数
 - 定数 `const`
