--- a/data/markdown/es2015.md
+++ b/data/markdown/es2015.md
@@ -88,7 +88,7 @@ console.log(name); // -> 大塚
 console.log(age); // -> 3
 ```
 
-## アロー関数
+## 関数
 
 ### 関数宣言
 
@@ -100,9 +100,21 @@ function foo(a, b) {
 console.log(foo(1, 2)); // -> 3
 ```
 
+### functionキーワードの関数式
+
+```js
+// 無名関数をfoo定数に代入している
+const foo = function(a, b) {
+  return a + b;
+};
+
+console.log(foo(1, 2)); // -> 3
+```
+
 ### アロー関数
 
 ```js
+// アロー関数は無名関数の関数式のみ
 const bar = (a, b) => {
   return a + b;
 };
@@ -136,12 +148,12 @@ console.log(text(person)); // -> 私の名前は大塚、年齢は3歳です！
 
 ## map
 
-第一引数のcallback関数を、配列の順番通りに各要素に対して1度ずつ呼び出し、その結果から新しい配列を生成する。
+第一引数のcallback関数を、配列の順番通りに各要素に対して1度ずつ呼び出し、その結果から新しい配列を生成します。
 
 ```js
 const member = ['ネズミ', '牛', 'トラ', 'うさぎ'];
 
-const greeting = member.map((name) => {
+const greeting = member.map(name => {
   // nameには'ネズミ'や'牛'が入っている
   return `${name}です！`;
 });
