--- a/data/markdown/es2015.md
+++ b/data/markdown/es2015.md
@@ -332,3 +332,38 @@ console.log(member); // -> ['ネズミ', '牛']
 console.log(person); // -> { name: '大塚', age: 3 }
 console.log(foo(1, 2)); // -> 3
 ```
+
+## Promise & async/await
+
+`Promiseオブジェクト`を使うと、非同期処理を扱いやすくなります。
+
+```js
+const promise = new Promise(resolve => {
+  setTimeout(() => {
+    resolve('約束だよ！');
+  }, 1000);
+});
+
+promise.then(arg => {
+  console.log(arg); // -> '約束だよ！'
+});
+```
+
+`async/await`を使うとこんな感じです。
+
+```js
+function promise() {
+  return new Promise(resolve => {
+    setTimeout(() => {
+      resolve("約束だよ！");
+    }, 1000);
+  });
+};
+
+async function asyncCall() {
+  const result = await promise();
+  console.log(result); // -> '約束だよ！'
+}
+
+asyncCall();
+```
