--- a/data/markdown/es2015.md
+++ b/data/markdown/es2015.md
@@ -1,6 +1,8 @@
 # ECMAScript2015+の基礎知識
 
-**React / Next.js**を使いこなすためには、**ECMAScript2015+**（以下、ES2015+）の知識が必要です。Reactの学習を始めるまえに、おさらいをしておきましょう。
+**React / Next.js**を使いこなすためには、**ECMAScript2015+**（以下、ES2015+）の知識が必要です。
+
+不安な方は、こちらを参照してくださいm(_ _)m
 
 ## 定数と変数
 - 定数 `const`
