export/importの部分を調整

--- a/data/markdown/es2015.md
+++ b/data/markdown/es2015.md
@@ -194,35 +194,16 @@ console.log(greeting('ネズミ', '牛', 'トラ', 'うさぎ'));
 
 ## ES Modules
 
-`export default` でデータを、グローバルオブジェクトに追加することなく、他のJavaScriptファイルへ出力できます。  
+`export/import` により、module(データ)を他のJavaScriptファイルで使用できる。
+※ `export default`(後述)を使わない場合は、定義と同時にexportする必要がある。
 
 ```js
 // foo.js
-export default 'テキスト';
+export const text = 'テキスト';
 ```
 
 ```js
-// index.js
-import foo from "./foo";
-
-console.log(foo); // -> テキスト
-```
-
-これでもOK。
-
-```js
-// foo.js
-const text = 'テキスト';
-
-export default text;
-```
-
-```js
-// index.js
-// textじゃなくてもOK
-import foo from "./foo";
-
-console.log(foo); // -> テキスト
+import { text } from './foo'
 ```
 
 複数`export`する場合。
@@ -279,17 +260,49 @@ console.log(person); // -> { name: '大塚', age: 3 }
 console.log(foo(1, 2)); // -> 3
 ```
 
-変数名を変えることもできる。
+変数名を変えて受け取ることもできる。
 
 ```js
 // index.js
-// num を number に変えている
+// num を number として呼び出すことができるようになる
 import { num as number } from "./foo";
 
 console.log(number); // -> 1
 ```
 
-`export default`と`export`は併用できる。
+`export default` を使えば、定義済のものをexportすることが可能。
+
+```js
+// foo.js
+const text = 'テキスト';
+
+export default text;
+```
+
+```js
+// index.js
+// export default したものをimportするときは、brace{}が無いことに注意
+import text from "./text";
+
+console.log(text); // -> テキスト
+```
+
+`export default` なら、無名のmoduleをexportできる。
+
+```js
+// foo.js
+export default 'テキスト';
+```
+
+```js
+// index.js
+// importの際に自由な名前を割り当てることができる
+import bar from "./foo";
+
+console.log(bar); // -> テキスト
+```
+
+`export`と`export default`は併用できる。
 
 ```js
 // foo.js
@@ -321,8 +334,7 @@ console.log(person); // -> { name: '大塚', age: 3 }
 console.log(foo(1, 2)); // -> 3
 ```
 
-これもOK。
-
+以下のようにimportすることも可能。
 ```js
 // index.js
 import foo, * as fooModule from "./foo";
