手動リバートします

--- a/data/markdown/es2015.md
+++ b/data/markdown/es2015.md
@@ -1,6 +1,8 @@
 # ECMAScript2015+の基礎知識
 
-**React / Next.js**を使いこなすためには、**ECMAScript2015+**（以下、ES2015+）の知識が必要です。Reactの学習を始めるまえに、おさらいをしておきましょう。
+**React / Next.js**を使いこなすためには、**ECMAScript2015+**（以下、ES2015+）の知識が必要です。
+
+不安な方は、こちらを参照してくださいm(_ _)m
 
 ## 定数と変数
 - 定数 `const`
@@ -192,16 +194,35 @@ console.log(greeting('ネズミ', '牛', 'トラ', 'うさぎ'));
 
 ## ES Modules
 
-`export/import` により、module(データ)を他のJavaScriptファイルで使用できる。
-※ `export default`(後述)を使わない場合は、定義と同時にexportする必要がある。
+`export default` でデータを、グローバルオブジェクトに追加することなく、他のJavaScriptファイルへ出力できます。  
 
 ```js
 // foo.js
-export const text = 'テキスト';
+export default 'テキスト';
 ```
 
 ```js
-import { text } from './foo'
+// index.js
+import foo from "./foo";
+
+console.log(foo); // -> テキスト
+```
+
+これでもOK。
+
+```js
+// foo.js
+const text = 'テキスト';
+
+export default text;
+```
+
+```js
+// index.js
+// textじゃなくてもOK
+import foo from "./foo";
+
+console.log(foo); // -> テキスト
 ```
 
 複数`export`する場合。
@@ -258,49 +279,17 @@ console.log(person); // -> { name: '大塚', age: 3 }
 console.log(foo(1, 2)); // -> 3
 ```
 
-変数名を変えて受け取ることもできる。
+変数名を変えることもできる。
 
 ```js
 // index.js
-// num を number として呼び出すことができるようになる
+// num を number に変えている
 import { num as number } from "./foo";
 
 console.log(number); // -> 1
 ```
 
-`export default` を使えば、定義済のものをexportすることが可能。
-
-```js
-// foo.js
-const text = 'テキスト';
-
-export default text;
-```
-
-```js
-// index.js
-// export default したものをimportするときは、brace{}が無いことに注意
-import text from "./text";
-
-console.log(text); // -> テキスト
-```
-
-`export default` なら、無名のmoduleをexportできる。
-
-```js
-// foo.js
-export default 'テキスト';
-```
-
-```js
-// index.js
-// importの際に自由な名前を割り当てることができる
-import bar from "./foo";
-
-console.log(bar); // -> テキスト
-```
-
-`export`と`export default`は併用できる。
+`export default`と`export`は併用できる。
 
 ```js
 // foo.js
@@ -332,7 +321,8 @@ console.log(person); // -> { name: '大塚', age: 3 }
 console.log(foo(1, 2)); // -> 3
 ```
 
-以下のようにimportすることも可能。
+これもOK。
+
 ```js
 // index.js
 import foo, * as fooModule from "./foo";
